--- a/hubonline/index.html
+++ b/hubonline/index.html
@@ -14,11 +14,11 @@
         <li>
         <a href="#">Aulas</a>
         <ul>
-        <li><a href="">Resumo do curso</a></li>
+        <li><a href="#">Resumo do curso</a></li>
         <li><a href="tabelas.html">Tabelas</a></li>
-        <li><a href="#">Listas</a></li>
-        <li><a href="#">Formulários</a></li>
-        <li><a href="#">Menus</a></li>
+        <li><a href="listas.html">Listas</a></li>
+        <li><a href="formularios.html">Formulários</a></li>
+        <li><a href="clinica.html">Menus</a></li>
         <li><a href="#">PetShop</a></li>
         <li><a href="#">Cards</a></li>
         </ul>
@@ -29,3 +29,4 @@
        
 </body>
 </html>
+
